// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<AccordionItem
  isOpen={false}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen___2_Z8eC",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content___1dpq2T",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop___23r4Aq",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile___3e9mHb",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title___1l-ihv",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow___33JDq1",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText___1TU4vA",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;

exports[`Snapshot match 2`] = `
<AccordionItem
  isOpen={true}
  onTitleClick={[Function]}
  theme={
    Object {
      "containerOpen": "src-shared-components-tc-communities-Accordion-AccordionItem-style___containerOpen___2_Z8eC",
      "content": "src-shared-components-tc-communities-Accordion-AccordionItem-style___content___1dpq2T",
      "desktop": "src-shared-components-tc-communities-Accordion-AccordionItem-style___desktop___23r4Aq",
      "mobile": "src-shared-components-tc-communities-Accordion-AccordionItem-style___mobile___3e9mHb",
      "title": "src-shared-components-tc-communities-Accordion-AccordionItem-style___title___1l-ihv",
      "titleArrow": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleArrow___33JDq1",
      "titleText": "src-shared-components-tc-communities-Accordion-AccordionItem-style___titleText___1TU4vA",
    }
  }
  title="Test title"
>
  <div>
    Test content
  </div>
</AccordionItem>
`;
